--- a/pages/catering.html
+++ b/pages/catering.html
@@ -15,32 +15,34 @@
 </head>
 
 <body>
-    
+
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html"><img src="../assets/MuzzlesLogo.png" alt="Muzzles Restaurant logo" width="250" height="92"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="nav">
-              <li class="nav-item">
-                <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active navbarFont" href="../pages/catering.html">Catering</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
-              </li>
-            </ul>
-          </div>
+        <div class="container">
+            <a class="navbar-brand" href="../index.html"><img src="../assets/MuzzlesLogo.png"
+                    alt="Muzzles Restaurant logo" width="250" height="92"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" aria-current="page" href="../pages/about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/menu.html">Menu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active navbarFont" href="../pages/catering.html">Catering</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link navbarFont" href="../pages/photos.html">Photos</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </nav>
-    
+    </nav>
+
     <!-- <nav class="navbar navbar-light">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
@@ -63,9 +65,11 @@
             </ul>
         </div>
     </nav> -->
-    <div class="row pt-3">
-        <div class="col-12 ATeamHeading">
-            <h2>Catering</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col ATeamHeading">
+                <h2 class="AcardHeading pt-3 py-3">Catering</h2>
+            </div>
         </div>
     </div>
     <div class="container pt-5">
@@ -77,7 +81,8 @@
     </div>
     <div class="container-fluid pt-5 sideImage">
         <div class="row">
-            <div class="col-lg-5 col-md-12 picOne">
+            <div class="col-lg-5 col-md-12">
+                <img src="../assets/cateringMaine.jpg " class="img-fluid Afit" alt="Two dogs looking at ingredients">
                 <!-- <img src="../assets/cateringMaine.jpg" class="img-fluid" alt="Trays of deli meats and stuffed tomatoes"> -->
             </div>
             <div class="col-lg-7 col-md-12">
@@ -133,7 +138,7 @@
     -->
 </body>
 <div class="footer">
-    <div class="container-fluid py-5">
+    <div class="container py-5">
         <div class="row">
             <div class="col-6 d-flex justify-content-start navbarFont">
                 <p>1357 Mutt Street, Rottweller CA. 12345</p>
