--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <body>
   <!-- -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+ 
 
   <nav class="navbar navbar-expand-lg navbar-light d-none d-lg-block d-xl-block">
     <div class="container ">
@@ -87,6 +88,41 @@
         </div>
     </div>
 </nav>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12" id="homeImage">
+
+    </div>
+  </div>
+</div>
+<div class="container pt-5">
+  <div class="row M-food-names">
+    <div class="col-lg-6  col-md-12 py-5 px-5">
+      <img src="./assets/homeSingle.jpg" class=" imgSize img-fluid" alt="Bread with side of Fries">
+    </div>
+    <div class="col-lg-6 col-md-12 py-5">
+      <div class="card">
+        <div class="card-body">
+          <p class="card-text AcardHeading">Muzzles Sandwiches & Grill</p>
+          <p class="AcardText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+            fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+            mollit anim id est laborum.</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 col-md-12">
+            <img src="./assets/HomeImage.jpg" class="card-img-top img-fluid" alt="Bread and a dog getting a food from the table with bread with shrimp in it.">
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
+</div>
 
   <footer>
     <div class="container-fluid py-5">
