--- a/pages/photos.html
+++ b/pages/photos.html
@@ -114,7 +114,7 @@
         </div>
     </nav>
 
-    <div style="background-color: #ffffff;" class="container d-flex justify-content-center mt-5">
+    <div style="background-color: #ffffff;" class="container d-flex justify-content-center">
         <div class="row py-3">
             <div class="col">
                 <h2 class="AcardHeading">Photos</h2>
@@ -122,7 +122,7 @@
         </div>
     </div>
 
-    <div class="container py-3 ">
+    <div class="container py-3 pb-5">
         <div class="row d-flex justify-content-center">
             <div class="col-lg-3 col-md-6 col-sm-12 d-flex justify-content-center py-3 px-0">
                 <img src="../assets/photo01.jpg" class=" P-border img-fluid" alt="Steak">
